--- a/SurvivalGame/Content/Scripts/heatmap.html
+++ b/SurvivalGame/Content/Scripts/heatmap.html
@@ -18,17 +18,18 @@
   <script type="text/javascript" src=".\node_modules\echarts-stat\dist\ecStat.js"></script>
   <script type="text/javascript" src=".\aliases.js"></script>
 
-  <script type="text/javascript">
+<script type="text/javascript">
     var dom = document.getElementById('container');
     var myChart = echarts.init(dom, null, {
       renderer: 'canvas',
       useDirtyRect: false
     });
+    var option;
     var app = {};
-    let size = 50;
+    let size = 100;
+    let data = [];
     let xData = [];
     let yData = [];
-    let data = [];
     for (let i = 0; i <= size; i++) {
       for (let j = 0; j <= size; j++) {
         data.push([i, j, 1]);
@@ -95,6 +96,7 @@
         }
     ]
     };
+    console.log("EVENT")
 
     if (option && typeof option === 'object') {
       myChart.setOption(option);
@@ -102,5 +104,80 @@
 
     window.addEventListener('resize', myChart.resize);
   </script>
+
+  <script type="text/javascript">
+    const webSocket = new WebSocket('ws://localhost:8080');
+    webSocket.onmessage = function (event) {
+      let newData = [];
+      let JData = JSON.parse(event.data)
+      console.log(JData);
+      for (let i = 0; i <= size; i++) {
+        for (let j = 0; j <= size; j++) {
+          newData.push([i, j, JData.data[(size*i)+j]]);
+        }
+      }
+      option = {
+        backgroundColor: 'rgba(255,255,255,.5)',
+        tooltip: {
+          show: true
+        },
+        xAxis: {
+          type: 'category',
+          title: 'test',
+          data: xData
+        },
+        yAxis: {
+          type: 'category',
+          title:'test2',
+          data: yData
+        },
+        visualMap: {
+          min: 0,
+          max: 1,
+          itemWidth: 10,
+          calculable: true,
+          realtime: true,
+          hoverLink: true,
+          inRange: {
+            color: [
+              '#313695',
+              '#4575b4',
+              '#74add1',
+              '#abd9e9',
+              '#e0f3f8',
+              '#ffffbf',
+              '#fee090',
+              '#fdae61',
+              '#f46d43',
+              '#d73027',
+              '#a50026'
+            ]
+          }
+        },
+        series: [
+          {
+            name: 'Gaussian',
+            type: 'heatmap',
+            data: newData,
+            emphasis: {
+              disabled: false,
+              itemStyle: {
+                borderColor: '#333',
+                borderWidth: 0
+              }
+            },
+            progressive: 1000,
+            animation: true
+          }
+        ]
+      };
+
+      if (option && typeof option === 'object') {
+        console.log("options")
+        myChart.setOption(option);
+      }
+    }
+  </script>
+
 </body>
 </html>
