--- a/SurvivalGame/Content/Scripts/healthpie.html
+++ b/SurvivalGame/Content/Scripts/healthpie.html
@@ -28,8 +28,12 @@
               { value: 500, name: 'Defenders' },
             ];
       option = {
+        backgroundColor: 'rgba(255,255,255,0.5)',
         title: {
           text: 'Total Health Pool',
+          textStyle: {
+            color: '#000000'
+          },
           left: 'center'
         },
         series: [
@@ -37,6 +41,15 @@
             name: 'Access From',
             type: 'pie',
             radius: '50%',
+            label: {
+              color: '#000000',
+              borderColor: '#000000'
+            },
+            labelLine: {
+              lineStyle: {
+                color: '#000000'
+              }
+            },
             data: data,
           }
         ]
