--- a/SurvivalGame/Content/Scripts/heatmap.html
+++ b/SurvivalGame/Content/Scripts/heatmap.html
@@ -42,6 +42,12 @@
         tooltip: {
           show: true
         },
+        grid: {
+          bottom: 0,
+          right: 0,
+          top: 0,
+          left: 0
+        },
         xAxis: {
           show: false,
           type: 'category',
@@ -92,8 +98,8 @@
           textStyle: {
             color: '#ffffff'
           },
-          left: 95,
-          bottom: 70,
+          left: 0,
+          bottom: 0,
           backgroundColor: 'rgba(0,0,0,0.5)',
           borderColor: '#000000',
           calculable: false,
@@ -101,17 +107,17 @@
           hoverLink: true,
           inRange: {
             color: [
-              '#313695',
-              '#4575b4',
-              '#74add1',
-              '#abd9e9',
-              '#e0f3f8',
-              '#ffffbf',
-              '#fee090',
-              '#fdae61',
-              '#f46d43',
-              '#d73027',
-              '#a50026'
+            '#313695',
+            '#4575b4',
+            '#74add1',
+            '#abd9e9',
+            '#e0f3f8',
+            '#ffffbf',
+            '#fee090',
+            '#fdae61',
+            '#f46d43',
+            '#d73027',
+            '#a50026'
             ]
           }
         },
